# kifu-analysis

./: .gitignore  Cargo.toml  README.md  bower.json  nginx.conf  package.json
app/: index.html
app/scripts/: main.js
core-lib/: Cargo.toml
core-lib/src/: lib.rs  usi_engine.rs
core-lib/src/encoder/: csa.rs  json.rs  mod.rs  usi.rs
core-lib/src/parser/: mod.rs  shougi_wars.rs  shougiwars.rs  usi.rs  usi_comobine.rs
core-lib/src/types/: piece.rs  position.rs
database-lib/: Cargo.toml
database-lib/migrations/20170317050251_create_users/: down.sql  up.sql
database-lib/src/: lib.rs  models.rs
migrations/20170317050251_create_users/: up.sql
server-lib/: .eslintrc.yml  .gitignore  Cargo.toml  bower.json  gulpfile.js  nginx.conf  package.json  webpack.config.js
server-lib/app/: index.html  main.js
server-lib/app/scripts/: Board.vue  Kifu.vue  KifuIndex.vue  main.js
server-lib/app/styles/: main.scss
server-lib/app/vue/: .eslintrc  Board.vue  Kifu.vue  KifuIndex.vue
server-lib/src/: error.rs  kifu.rs  lib.rs  scraping.rs  users.rs  websocket.rs
server-lib/templates/: error.hbs  index.hbs  layout.hbs
server-lib/templates/kifu/: index.hbs  new.hbs  show.hbs
server-lib/templates/kifu/shougiwars/: game.hbs  history.hbs
server-lib/templates/users/: login.hbs  signup.hbs
server-lib/test/: game  history
src/: lib.rs  main.rs  piece.rs  position.rs  usi_engine.rs
src/encoder/: csa.rs  japanese.rs  json.rs  mod.rs  usi.rs
src/parser/: mod.rs  shougi_wars.rs  usi.rs
src/types/: mod.rs  piece.rs  position.rs
