[package]
name = "kifu_analysis"
version = "0.1.0"
authors = ["sunaemon <@sunaemon0>"]

[dependencies]
log = "*"
env_logger = "*"
json = "*"

hyper = "*"
iron = "*"
staticfile = "*"
mount = "*"

ws = "*"
dotenv = "*"

[dependencies.logger]
git = "https://github.com/iron/logger.git"

[dependencies.core-lib]
path = "core-lib"

[dependencies.database-lib]
path = "database-lib"
