[package]
name = "database-lib"
version = "0.1.0"
authors = ["sunaemon <@sunaemon0>"]
workspace = ".."

[dependencies]
diesel = { version = "0.12.0", features = ["postgres", "chrono"] }
diesel_codegen = { version = "0.12.0", features = ["postgres"] }

rand = "*"
rust-crypto = "^0.2"
dotenv = "*"
lazy_static = "*"

chrono = { version = "0.3", features = ["rustc-serialize"] }

clippy = {version = "*", optional = true}

[features]
default = []
