[package]
name = "server-lib"
version = "0.1.0"
authors = ["sunaemon <@sunaemon0>"]

[dependencies]
log = "^0.3.7"
env_logger = "^0.4.2"

json = "^0.11.6"

hyper = "^0.10.5"
iron = "^0.5.1"
staticfile = "^0.4.0"
mount = "^0.3.0"
tera = "^0.8.1"

ws = "^0.6.1"

[dependencies.logger]
git = "https://github.com/iron/logger.git"

[dependencies.core-lib]
path = "../core-lib"

[dependencies.database-lib]
path = "../database-lib"

