[package]
name = "server-lib"
version = "0.1.0"
authors = ["sunaemon <@sunaemon0>"]
workspace = ".."

[dependencies]
log = "^0.3.7"
env_logger = "^0.4.2"

json = "^0.11.6"

hyper = "^0.10.5"
hyper-native-tls = "*"
iron = "^0.5.1"
staticfile = "^0.4.0"
mount = "^0.3.0"
router = "^0.5.0"
urlencoded = "^0.5.0"

handlebars = "^0.25.0"
handlebars-iron = "^0.23.0"

iron-sessionstorage = "^0.6.6"

ws = "^0.7.0"

url = "*"
rustc-serialize = "^0.3.16"
regex = "*"
chrono = { version = "0.3", features = ["rustc-serialize"] }

lazy_static = "*"

clippy = {version = "*", optional = true}

[features]
default = []
watch = ["handlebars-iron/watch"]

[dependencies.logger]
git = "https://github.com/iron/logger.git"

[dependencies.core-lib]
path = "../core-lib"

[dependencies.database-lib]
path = "../database-lib"

